// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderedList /> can have a list style 1`] = `
.c2 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c3 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 {
  padding-left: 3rem;
  list-style-type: decimal;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> can have a list style 2`] = `
.c2 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c3 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c4 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 {
  padding-left: 3rem;
  list-style-type: upper-alpha;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> renders 1`] = `
.c2 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c3 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c1 {
  padding-left: 3rem;
  list-style-type: decimal;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c2"
  >
    <span
      class="c3"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;
